# Real-Estate-Website

./: .dockerignore  .gitignore  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt  schema.md
base/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
base/api/: serializers.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_estate_description.py  0002_initial.py  0003_contactinfo_contactmedia_covers_section_and_more.py  0004_slide_delete_covers.py  0005_rename_estatesection_sectionestate_and_more.py
base/templates/base/: base.html  footer.html  home.html  map.html  navbar.html
base/templates/estates/: estates.html
base/views/: auth.py  views.py
real_estate/: settings.py  urls.py
static/css/: main.css  variables.css
static/js/: main.js
users/: models.py
users/api/: serializers.py
users/migrations/: 0001_initial.py
